# package_filter_kata

./: CMakeLists.txt  CppKata.sln  PackageFilterKata.sln  README.md
CppKata/: CppKata.vcxproj  Filters.cpp  Filters.hpp  Package.cpp  Package.hpp  process.cpp  process.hpp
GoogleTestProject/: GoogleTestProject.vcxproj  UnitTests.cpp  gtest-all.cc  main.cpp  pch.h
KataMain/: KataMain.vcxproj  input.txt  main.cpp
